--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "json-to-variables",
   "version": "1.0.0",
-  "description": "Github action that reads json file and writes its content as env variables",
+  "description": "This action reads json file and writes its content as environment variables",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
