--- a/action.yml
+++ b/action.yml
@@ -1,8 +1,9 @@
 name: 'JSON to variables'
 author: 'Anton Ivanenko'
 description: 'This action reads json file and writes its content as environment variables'
-icon: 'box'
-color: 'purple'
+branding:
+  icon: 'box'
+  color: 'purple'
 inputs:
   filename: 
     description: 'The json file.'
