--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "url": "git+https://github.com/antifree/json-to-variables.git"
   },
   "keywords": [],
-  "author": "Anton Ivanenko",
-  "license": "MIT",
+  "author": "Matheus Correia",
   "bugs": {
     "url": "https://github.com/antifree/json-to-variables/issues"
   },
