Revert "feat: add prefix as optional"
This reverts commit b7e5cac23ce63b1def19a5200ab8bd212e14c47e.

--- a/action.yml
+++ b/action.yml
@@ -1,5 +1,5 @@
-name: 'JSON to variables - without prefix'
-author: 'Matheus Correia'
+name: 'JSON to variables'
+author: 'Anton Ivanenko'
 description: 'This action reads json file and writes its content as environment variables'
 branding:
   icon: 'box'
